tests/baselines/reference/numeric-separator-literal-nonoctal-08-err.errors.txt
numeric-separator-literal-nonoctal-08-err.ts(37,1): error TS1489: Decimals with leading zeros are not allowed.
numeric-separator-literal-nonoctal-08-err.ts(37,3): error TS1005: ';' expected.
numeric-separator-literal-nonoctal-08-err.ts(37,3): error TS2304: Cannot find name '_0'.


==== numeric-separator-literal-nonoctal-08-err.ts (3 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator must not be in a NonOctalDecimalIntegerLiteral (08)
    info: |
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        0
        NonZeroDigit DecimalDigitsopt
        NonZeroDigit
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
        NonOctalDecimalIntegerLiteral
    
      NonOctalDecimalIntegerLiteral ::
        0 NonOctalDigit
        LegacyOctalLikeDecimalIntegerLiteral NonOctalDigit
        NonOctalDecimalIntegerLiteral DecimalDigit
    
      LegacyOctalLikeDecimalIntegerLiteral ::
        0 OctalDigit
        LegacyOctalLikeDecimalIntegerLiteral OctalDigit
    
      NonOctalDigit::one of
        8 9
    negative:
      phase: parse
      type: SyntaxError
    features: [numeric-separator-literal]
    ---*/
    
    
    08_0;
    ~~
!!! error TS1489: Decimals with leading zeros are not allowed.
      ~~
!!! error TS1005: ';' expected.
      ~~
!!! error TS2304: Cannot find name '_0'.
    